--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>F-1 Feeder</title>
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
+  <title>F-1 Feeder</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.3/angular-sanitize.min.js.map"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
 </head>
-<!-- making this an angular app -->
-<!-- defines which controller will be in charge of your view -->
 <body ng-app="F1FeederApp" ng-controller="driversController">
   <table>
     <thead>
       <tr><th colspan="4">Drivers Championship Standings</th></tr>
     </thead>
     <tbody>
-    <!-- define your template scope when looping through collections -->
       <tr ng-repeat="driver in driversList">
         <td>{{$index + 1}}</td>
         <td>
